4.1/9bd54f64afa4da93d8f5751d80466ab3d660b51c
c6x: include: asm: setup: Include "linux/types.h"

Some modules may assume "asm/setup.h" already include all headers which
needed by itself. So need let "asm/setup.h" include "linux/types.h", the
related error:

  C [M]  drivers/input/joydev.o
  In file included from include/asm-generic/page.h:23:0,
                   from ./arch/c6x/include/asm/page.h:9,
                   from include/asm-generic/io.h:14,
                   from arch/c6x/include/generated/asm/io.h:1,
                   from drivers/input/joydev.c:15:
  ./arch/c6x/include/asm/setup.h:17:27: error: unknown type name 'phys_addr_t'
   extern int c6x_add_memory(phys_addr_t start, unsigned long size);
                             ^

Signed-off-by: Chen Gang <gang.chen.5i5j@gmail.com>
Signed-off-by: Mark Salter <msalter@redhat.com>

